<resources>
    <string name="app_name">GeoModel</string>
    <string name="url_server">http://192.168.1.194:6081/simple/versionUpdate/update</string>
    <string name="text_explain">描述</string>
    <string name="text_titleHint">请填写标题(5个字以内)</string>
    <string name="text_desHint">描述一下吧(必填)</string>
    <string name="text_upload">上传</string>
    <string name="text_phone">手机号</string>
    <string name="text_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_register2">注册</string>
    <string name="text_register">注册 GeoModel</string>
    <string name="text_forget">忘记密码?</string>
    <string name="text_finish">完成</string>
    <string name="text_phoneNum">手机号码</string>
    <string name="register_et_confirmpwd">再次输入密码</string>
    <string name="text_titleForget">忘记密码</string>
    <string name="text_oldPassword">旧密码:</string>
    <string name="text_newPassword">新密码</string>
    <string name="text_comNewPassword">确认新密码</string>
    <string name="text_ok">确定</string>
    <string name="set_pwd_et_hint_code">验证码</string>
    <string name="set_pwd_tv_getcode">获取验证码</string>
    <string name="toast_codeError">验证码输入错误</string>
    <string name="reg_smscode">^\\d{4}$||短信验证码由4位数字组成</string>
    <string name="reg_phone">^1\\d{10}$||手机号由11位数字组成，第一个数字必须为1</string>
    <string name="reg_psd">^[a-zA-Z0-9]{6,20}$||密码由6-20位数字或字母组成，不能包含特殊符号</string>
    <string name="toast_netadvice">网络连接失败，再试试吧~</string>
    <string name="toast_netfail">网络已断开！</string>
    <string name="toast_netsuccess">网络已恢复！</string>
    <string name="text_occupied">该账号已在别处登录，请重新登录。</string>
    <string name="popwindow_grasses_title">选择眼镜</string>
    <string name="connecction_timeout">"连接超时，请稍后重试</string>
    <string name="serverException">服务器异常</string>

    <string name="tv_clickEnter">点击进入</string>

    <!--主页-->
    <string name="text_main">首页</string>
    <string name="text_add">添加</string>
    <string name="tv_glasses">我的眼镜:</string>
    <string name="tv_tochoose">去选择</string>
    <string name="tv_title">标题:</string>
    <string name="tv_describe">描述:</string>
    <string name="tv_haveSave">已保存</string>
    <string name="tv_haveUp">已上传</string>
    <string name="tv_modify">更换</string>
    <string name="tv_up">上传</string>
    <string name="tv_delete">删除</string>
    <string name="tv_fusion">合成</string>
    <string name="tv_save">保存</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_empty">暂无历史记录</string>
    <string name="text_chooseNum">请指定照片数量</string>
    <string name="rb_1">1</string>
    <string name="rb_3">3</string>
    <string name="rb_6">6</string>
    <string name="rb_9">9</string>
    <string name="tv_updateTitle">版本升级</string>
    <string name="tv_updateContent">更新内容：</string>
    <string name="tv_fail">版本更新失败</string>
    <!--个人资料-->
    <string name="tv_personInfo">个人资料</string>
    <string name="tv_icon">头像</string>
    <string name="tv_nikename">昵称</string>
    <string name="tv_sex">性别</string>
    <string name="tv_sign">个性签名</string>

    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>

    <!--设置界面-->
    <string name="tv_setting">设置</string>
    <string name="tv_currentVersion">当前版本</string>
    <string name="tv_checkUpdate">检查新版本</string>
    <string name="tv_clear">清除缓存</string>
    <string name="tv_swithMessage">推送消息</string>
    <string name="tv_modifyPassword">修改密码</string>
    <string name="text_newPassword2">新密码：</string>
    <string name="et_hintpassword">6-16个字符，区分大小写</string>
    <string name="tv_show">显示密码</string>
    <string name="tv_about">关于我们</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_apk">安装</string>
</resources>
