<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="oldPassword"
            type="String"/>

        <variable
            name="newPassword"
            type="String"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_topbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="@dimen/padding_10"
            android:text="@string/text_oldPassword"
            android:textColor="@color/gray_6" />

        <EditText
            android:id="@+id/et_oldPwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_tb"
            android:ems="10"
            android:text="@{oldPassword}"
            android:hint="@string/et_hintpassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="@dimen/padding_10"
            android:text="@string/text_newPassword"
            android:textColor="@color/gray_6" />

        <EditText
            android:id="@+id/et_newPwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_tb"
            android:ems="10"
            android:text="@{newPassword}"
            android:hint="@string/et_hintpassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/seletor_button_loginbg"
            android:onClick="onClick"
            android:text="@string/text_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_show"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:checked="true"
                android:background="@drawable/selector_radiobutton"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_14"
                android:layout_marginLeft="5dp"
                android:text="@string/tv_show" />
        </LinearLayout>
    </LinearLayout>
</layout>


