<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_login"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/text_chooseNum"
            android:textColor="@color/black"
            android:textSize="@dimen/padding_20" />

        <RadioGroup
            android:id="@+id/rg_giveUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:checkedButton="@+id/rb_1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/selector_radiobutton"
                android:padding="5dp"
                android:button="@null"
                android:layout_marginLeft="10dp"
                android:text="@string/rb_1"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18" />


            <RadioButton
                android:id="@+id/rb_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/selector_radiobutton"
                android:padding="5dp"
                android:button="@null"
                android:layout_marginLeft="10dp"
                android:text="@string/rb_3"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18" />

            <RadioButton
                android:id="@+id/rb_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/selector_radiobutton"
                android:drawablePadding="5dp"
                android:button="@null"
                android:text="@string/rb_6"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18" />

            <RadioButton
                android:id="@+id/rb_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/selector_radiobutton"
                android:button="@null"
                android:drawablePadding="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/rb_9"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_div"></View>

        <TextView
            android:id="@+id/tv_argee"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:clickable="true"
            android:padding="10dp"
            android:text="确定"
            android:textColor="@color/blue_1"
            android:textSize="@dimen/textsize_22" />
    </LinearLayout>


</LinearLayout>