<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="forgetPassword"
            type="com.king.geomodel.model.request.ResetPassword" />

        <import type="android.text.TextUtils"></import>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_topbar" />


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_tb"
            android:hint="@string/text_phoneNum"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@={forgetPassword.phone}"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_tb"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/set_pwd_et_hint_code"
                android:inputType="number"
                android:text="@={forgetPassword.authCode}"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_getcode"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/seletor_bg_code"
                android:clickable="true"
                android:enabled="@{!TextUtils.isEmpty(forgetPassword.phone)&amp;&amp;forgetPassword.click}"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@={forgetPassword.getAuthCode}"
                android:textColor="@color/white" />
        </LinearLayout>



        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_tb"
            android:ems="10"
            android:hint="@string/text_newPassword"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:text="@={forgetPassword.password}"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_16">

        </EditText>

        <EditText
            android:id="@+id/et_comfirmpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_tb"
            android:ems="10"
            android:hint="@string/text_comNewPassword"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:text="@={forgetPassword.comfirmPassword}"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_16">

        </EditText>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/seletor_button_loginbg"
            android:enabled="@{!TextUtils.isEmpty(forgetPassword.phone)&amp;&amp;!TextUtils.isEmpty(forgetPassword.password)&amp;&amp;!TextUtils.isEmpty(forgetPassword.comfirmPassword)}"
            android:onClick="onClick"
            android:text="@string/text_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_16" />
    </LinearLayout>
</layout>


